.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
11:18:52 **** Incremental Build of configuration Debug for project hercules-lcd ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m0 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F051x8 -c -I../Core/Inc -I../Drivers/STM32F0xx_HAL_Driver/Inc -I../Drivers/STM32F0xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F0xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'HAL_UARTEx_RxEventCallback':
../Core/Src/main.c:94:3: warning: implicit declaration of function 'print_lcd' [-Wimplicit-function-declaration]
   94 |   print_lcd();
      |   ^~~~~~~~~
../Core/Src/main.c: At top level:
../Core/Src/main.c:99:6: warning: conflicting types for 'print_lcd'
   99 | void print_lcd(){
      |      ^~~~~~~~~
../Core/Src/main.c:94:3: note: previous implicit declaration of 'print_lcd' was here
   94 |   print_lcd();
      |   ^~~~~~~~~
../Core/Src/main.c: In function 'print_lcd':
../Core/Src/main.c:103:18: warning: pointer targets in passing argument 1 of 'lcd_send_string' differ in signedness [-Wpointer-sign]
  103 |  lcd_send_string(Rx_data);
      |                  ^~~~~~~
      |                  |
      |                  uint8_t * {aka unsigned char *}
In file included from ../Core/Src/main.c:24:
../Core/Inc/i2c-lcd.h:9:29: note: expected 'char *' but argument is of type 'uint8_t *' {aka 'unsigned char *'}
    9 | void lcd_send_string (char *str);  // send string to the lcd
      |                       ~~~~~~^~~
../Core/Src/main.c: In function 'write_lcd':
../Core/Src/main.c:126:19: warning: pointer targets in passing argument 1 of 'lcd_send_string' differ in signedness [-Wpointer-sign]
  126 |   lcd_send_string(w_data);
      |                   ^~~~~~
      |                   |
      |                   uint8_t * {aka unsigned char *}
In file included from ../Core/Src/main.c:24:
../Core/Inc/i2c-lcd.h:9:29: note: expected 'char *' but argument is of type 'uint8_t *' {aka 'unsigned char *'}
    9 | void lcd_send_string (char *str);  // send string to the lcd
      |                       ~~~~~~^~~
arm-none-eabi-gcc -o "hercules-lcd.elf" @"objects.list"   -mcpu=cortex-m0 -T"C:\Users\hasan\Desktop\stm32_workspace\hercules-lcd\STM32F051R8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="hercules-lcd.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: hercules-lcd.elf
 
arm-none-eabi-size   hercules-lcd.elf 
arm-none-eabi-objdump -h -S  hercules-lcd.elf  > "hercules-lcd.list"
   text	   data	    bss	    dec	    hex	filename
  14892	     20	   1940	  16852	   41d4	hercules-lcd.elf
Finished building: default.size.stdout
 
Finished building: hercules-lcd.list
 
11:18:59 **** Incremental Build of configuration Debug for project hercules-lcd ****
make -j12 all 
arm-none-eabi-size   hercules-lcd.elf 
   text	   data	    bss	    dec	    hex	filename
  14892	     20	   1940	  16852	   41d4	hercules-lcd.elf
Finished building: default.size.stdout
 
11:21:01 **** Incremental Build of configuration Debug for project hercules-lcd ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m0 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F051x8 -c -I../Core/Inc -I../Drivers/STM32F0xx_HAL_Driver/Inc -I../Drivers/STM32F0xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F0xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'HAL_UARTEx_RxEventCallback':
../Core/Src/main.c:94:3: warning: implicit declaration of function 'print_lcd' [-Wimplicit-function-declaration]
   94 |   print_lcd();
      |   ^~~~~~~~~
../Core/Src/main.c: At top level:
../Core/Src/main.c:99:6: warning: conflicting types for 'print_lcd'
   99 | void print_lcd(){
      |      ^~~~~~~~~
../Core/Src/main.c:94:3: note: previous implicit declaration of 'print_lcd' was here
   94 |   print_lcd();
      |   ^~~~~~~~~
../Core/Src/main.c: In function 'print_lcd':
../Core/Src/main.c:103:18: warning: pointer targets in passing argument 1 of 'lcd_send_string' differ in signedness [-Wpointer-sign]
  103 |  lcd_send_string(Rx_data);
      |                  ^~~~~~~
      |                  |
      |                  uint8_t * {aka unsigned char *}
In file included from ../Core/Src/main.c:24:
../Core/Inc/i2c-lcd.h:9:29: note: expected 'char *' but argument is of type 'uint8_t *' {aka 'unsigned char *'}
    9 | void lcd_send_string (char *str);  // send string to the lcd
      |                       ~~~~~~^~~
../Core/Src/main.c:104:10: error: expected expression before ']' token
  104 |  Rx_data[] = {0};
      |          ^
../Core/Src/main.c: In function 'write_lcd':
../Core/Src/main.c:127:19: warning: pointer targets in passing argument 1 of 'lcd_send_string' differ in signedness [-Wpointer-sign]
  127 |   lcd_send_string(w_data);
      |                   ^~~~~~
      |                   |
      |                   uint8_t * {aka unsigned char *}
In file included from ../Core/Src/main.c:24:
../Core/Inc/i2c-lcd.h:9:29: note: expected 'char *' but argument is of type 'uint8_t *' {aka 'unsigned char *'}
    9 | void lcd_send_string (char *str);  // send string to the lcd
      |                       ~~~~~~^~~
make: *** [Core/Src/subdir.mk:37: Core/Src/main.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.
11:29:24 **** Incremental Build of configuration Debug for project hercules-lcd ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m0 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F051x8 -c -I../Core/Inc -I../Drivers/STM32F0xx_HAL_Driver/Inc -I../Drivers/STM32F0xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F0xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'print_lcd':
../Core/Src/main.c:110:18: warning: pointer targets in passing argument 1 of 'lcd_send_string' differ in signedness [-Wpointer-sign]
  110 |  lcd_send_string(Rx_data);
      |                  ^~~~~~~
      |                  |
      |                  uint8_t * {aka unsigned char *}
In file included from ../Core/Src/main.c:24:
../Core/Inc/i2c-lcd.h:9:29: note: expected 'char *' but argument is of type 'uint8_t *' {aka 'unsigned char *'}
    9 | void lcd_send_string (char *str);  // send string to the lcd
      |                       ~~~~~~^~~
../Core/Src/main.c: In function 'write_lcd':
../Core/Src/main.c:129:19: warning: pointer targets in passing argument 1 of 'lcd_send_string' differ in signedness [-Wpointer-sign]
  129 |   lcd_send_string(w_data);
      |                   ^~~~~~
      |                   |
      |                   uint8_t * {aka unsigned char *}
In file included from ../Core/Src/main.c:24:
../Core/Inc/i2c-lcd.h:9:29: note: expected 'char *' but argument is of type 'uint8_t *' {aka 'unsigned char *'}
    9 | void lcd_send_string (char *str);  // send string to the lcd
      |                       ~~~~~~^~~
arm-none-eabi-gcc -o "hercules-lcd.elf" @"objects.list"   -mcpu=cortex-m0 -T"C:\Users\hasan\Desktop\stm32_workspace\hercules-lcd\STM32F051R8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="hercules-lcd.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: hercules-lcd.elf
 
arm-none-eabi-size   hercules-lcd.elf 
arm-none-eabi-objdump -h -S  hercules-lcd.elf  > "hercules-lcd.list"
   text	   data	    bss	    dec	    hex	filename
  14920	     20	   1940	  16880	   41f0	hercules-lcd.elf
Finished building: default.size.stdout
 
Finished building: hercules-lcd.list
 
